--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-no conetnt
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>CDN | Sono</title>
+  </head>
+  <body>
+    <h1>Sorry, but you have no access.</h1>
+  </body>
+</html>
