--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>CDN | Sono</title>
   </head>
   <body>
-    <h1>Sorry, but you have no access.</h1>
+    <br>
+    <br>
+    <h1 style="text-align: center;">Sorry, but you have no access.</h1>
   </body>
 </html>
